# divad

./: README.md  pyproject.toml
conf/detector/: mscred.yaml  omni_anomaly.yaml
exathlon/data/managers/: spark_manager.py
exathlon/detection/detectors/: mscred.py  omni_anomaly.py
exathlon/detection/detectors/helpers/: tf_omni_anomaly.py  torch_mscred.py
exathlon/detection/detectors/helpers/tf_omni_anomaly_helpers/: prediction.py  recurrent_distribution.py  training.py  utils.py  vae.py  wrapper.py
exathlon/detection/detectors/helpers/torch_mscred_helpers/: convlstm.py  correlation_matrix.py
exathlon/features/crafters/: spark_crafter.py
exathlon/utils/spark/: metadata.py
scripts/: utils.sh
scripts/asd/: build_features.sh  evaluate_all_divads.sh  evaluate_all_tranads.sh  evaluate_deep_sad.sh  evaluate_divad.sh  evaluate_tranad.sh  make_datasets.sh  train_deep_sad.sh  train_divad.sh  train_tranad.sh  utils.sh
scripts/spark/: evaluate_mscred.sh  evaluate_omni_anomaly.sh  train_mscred.sh  train_omni_anomaly.sh
