[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "exathlon"
version = "2.0.0"
authors = [
    {name = "Vincent Jacob", email = "vincent.jacob@inria.fr"},
]
description = "An integrated pipeline for explainable anomaly detection"
readme = "README.md"
requires-python = "<=3.6.15"
license = {text = "Apache License 2.0"}
dependencies = [
    "python-dotenv",
    "hydra-core",
    "inputimeout",
    "numpy==1.15.4",
    "scipy",
    "pandas",
    "scikit-learn",
    "xgboost",
    "imbalanced-learn",
    "tensorflow==1.12.0",
    # "tensorflow-gpu==1.12.0",
    "tensorflow==1.12.0",
    "tensorflow_probability==0.5.0",
    # deepod repo (package lacks some methods)
    "zhusuan@git+https://github.com/thu-ml/zhusuan",
    "tfsnippet@git+https://github.com/haowen-xu/tfsnippet.git@v0.2.0-alpha1",
    "Markdown==3.3.4",  # tensorboard compatibility
    "importlib-metadata<5.0",  # tensorboard compatibility
    "matplotlib",
    "tqdm",
    "lime",
    "dill"  # needed to save LIME objects
]

[project.optional-dependencies]
dev = [
    "black[jupyter]",
    "pytest"
]
docs = [
    "sphinx",
    "sphinx-autobuild",
    "myst-parser",
    "furo",
    "nbsphinx"
]
notebooks = [
    "ipykernel",
    "ipywidgets",  # for IProgress
    "watermark",
    "PyQt5",
    "statsmodels",
    "seaborn",
    "datashader",
    "bokeh",
    "holoviews",
    "colorcet",
    "scikit-image",
]
profiling = [
    "memory_profiler",
]
all = [
    "exathlon[dev]",
    "exathlon[docs]",
    "exathlon[profiling]",
    "exathlon[notebooks]"
]

[tool.setuptools.packages.find]
where = ["exathlon"]

[project.scripts]
exathlon = "run:main"